# ANLP-steering-vectors

./: .gitignore  =0.46.1  PERSONA_DRIFT.md  README.md  analyze_run.py  debate_personas.json  debate_topics.json  debate_topics_moralism.json  evaluate_steering.py  evaluate_vectors.py  evil.json  persona_prompts.json  plot_debate.py  pyproject.toml  questions.json  requirements.txt  run_all_experiments.sh  run_and_stop.sh  simulate_persona_debate.py  simulate_persona_drift.py  sycophancy.json
scripts/: run_evil_qwen_ec2.sh  run_paper_pipeline.sh  run_three_traits.py  run_two_traits_ec2.sh
src/persona_vectors/: __init__.py  artifact_generation.py  cli.py  hf.py  interfaces.py  judging.py  openai_client.py  pipeline.py  prompts.py  s3_persistence.py  selection.py  serialization.py  traits.py  types.py
src/persona_vectors.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_artifact_generation.py  test_judging_bulk.py  test_pipeline.py
