[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-vectors"
version = "0.1.0"
description = "Modular extraction pipeline for persona steering vectors in decoder-only LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "numpy>=1.26",
  "torch>=2.1",
  "transformers>=4.44",
  "openai>=1.35",
  "boto3>=1.34"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
quantization = [
  "bitsandbytes>=0.41",
  "accelerate>=0.25"
]

[project.scripts]
persona-vectors = "persona_vectors.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
